compiler-core/main/__generate/docs/snapshots/gleam_core____generate__docs__tests__constructor_with_long_types_and_many_fields.snap
---
source: compiler-core/src_refactored/__generate/docs/tests.rs
assertion_line: 1173
expression: output
snapshot_kind: text
---
---- SOURCE CODE
-- option.gleam
pub type Option(a)

-- main.gleam

import option

pub type Uri {
    Uri(
        scheme: option.Option(String),
        userinfo: option.Option(String),
        host: option.Option(String),
        port: option.Option(Int),
        path: String,
        query: option.Option(String),
        fragment: option.Option(String)
    )
}


---- TYPES

--- Uri
<pre><code>pub type Uri {
  Uri(
    scheme: option.Option(String),
    userinfo: option.Option(String),
    host: option.Option(String),
    port: option.Option(Int),
    path: String,
    query: option.Option(String),
    fragment: option.Option(String),
  )
}</code></pre>

-- CONSTRUCTORS

<pre><code>Uri(
  scheme: option.Option(String),
  userinfo: option.Option(String),
  host: option.Option(String),
  port: option.Option(Int),
  path: String,
  query: option.Option(String),
  fragment: option.Option(String),
)</code></pre>
