compiler-core/main/__generate/docs/snapshots/gleam_core____generate__docs__tests__function_uses_reexport_of_internal_type.snap
---
source: compiler-core/src_refactored/__generate/docs/tests.rs
assertion_line: 1133
expression: output
snapshot_kind: text
---
---- SOURCE CODE
-- thepackage/internal.gleam
pub type Internal

-- main.gleam

import thepackage/internal

pub type External = internal.Internal

pub fn do_thing(value: internal.Internal) -> External {
  value
}


---- TYPES

--- External
<pre><code>pub type External =
  @internal Internal</code></pre>

---- VALUES

--- do_thing
<pre><code>pub fn do_thing(value: <a href="#External">External</a>) -> <a href="#External">External</a></code></pre>
