compiler-core/main/__generate/docs/snapshots/gleam_core____generate__docs__tests__function_uses_reexport_of_internal_type_in_other_module.snap
---
source: compiler-core/src_refactored/__generate/docs/tests.rs
assertion_line: 1150
expression: output
snapshot_kind: text
---
---- SOURCE CODE
-- thepackage/internal.gleam
pub type Internal

-- thepackage/something.gleam

import thepackage/internal

pub type External = internal.Internal


-- main.gleam

import thepackage/something

pub fn do_thing(value: something.External) {
  value
}


---- VALUES

--- do_thing
<pre><code>pub fn do_thing(value: <a href="thepackage/something.html#External" title="thepackage/something.{type External}">something.External</a>) -> <a href="thepackage/something.html#External" title="thepackage/something.{type External}">something.External</a></code></pre>
