compiler-core/main/__generate/docs/snapshots/gleam_core____generate__docs__tests__generated_type_variables.snap
---
source: compiler-core/src_refactored/__generate/docs/tests.rs
assertion_line: 991
expression: output
snapshot_kind: text
---
---- SOURCE CODE
-- main.gleam

pub fn wibble(_a, _b, _c, _d) {
  todo
}


---- VALUES

--- wibble
<pre><code>pub fn wibble(a: a, b: b, c: c, d: d) -> e</code></pre>
