compiler-core/main/__generate/docs/snapshots/gleam_core____generate__docs__tests__generated_type_variables_do_not_take_into_account_other_definitions.snap
---
source: compiler-core/src_refactored/__generate/docs/tests.rs
assertion_line: 1027
expression: output
snapshot_kind: text
---
---- SOURCE CODE
-- main.gleam

pub fn wibble(_a: a, _b: b, _c: c) -> d {
  todo
}

pub fn identity(x) { x }


---- VALUES

--- identity
<pre><code>pub fn identity(x: a) -> a</code></pre>

--- wibble
<pre><code>pub fn wibble(a: a, b: b, c: c) -> d</code></pre>
