compiler-core/main/__generate/docs/snapshots/gleam_core____generate__docs__tests__highlight_custom_type.snap
---
source: compiler-core/src_refactored/__generate/docs/tests.rs
assertion_line: 820
expression: output
snapshot_kind: text
---
---- SOURCE CODE
-- main.gleam

pub type Wibble(a, b) {
  Wibble(a, i: Int)
  Wobble(b: b, c: String)
}


---- TYPES

--- Wibble
<pre><code><span class="hljs-keyword">pub type </span><span class="hljs-title">Wibble</span>(<span class="hljs-variable">a</span>, <span class="hljs-variable">b</span>) {
  <span class="hljs-title">Wibble</span>(<span class="hljs-variable">a</span>, <span class="hljs-variable">i</span>: <span class="hljs-title">Int</span>)
  <span class="hljs-title">Wobble</span>(<span class="hljs-variable">b</span>: <span class="hljs-variable">b</span>, <span class="hljs-variable">c</span>: <span class="hljs-title">String</span>)
}</code></pre>

-- CONSTRUCTORS

<pre><code><span class="hljs-title">Wibble</span>(<span class="hljs-variable">a</span>, <span class="hljs-variable">i</span>: <span class="hljs-title">Int</span>)</code></pre>

<pre><code><span class="hljs-title">Wobble</span>(<span class="hljs-variable">b</span>: <span class="hljs-variable">b</span>, <span class="hljs-variable">c</span>: <span class="hljs-title">String</span>)</code></pre>
