compiler-core/main/__generate/docs/snapshots/gleam_core____generate__docs__tests__highlight_function_definition.snap
---
source: compiler-core/src_refactored/__generate/docs/tests.rs
assertion_line: 793
expression: output
snapshot_kind: text
---
---- SOURCE CODE
-- main.gleam

pub fn wibble(list: List(Int), generic: a, function: fn(a) -> b) -> #(a, b) { todo }


---- VALUES

--- wibble
<pre><code><span class="hljs-keyword">pub fn </span><span class="hljs-title">wibble</span>(
  <span class="hljs-variable">list</span>: <span class="hljs-title">List</span>(<span class="hljs-title">Int</span>),
  <span class="hljs-variable">generic</span>: <span class="hljs-variable">a</span>,
  <span class="hljs-variable">function</span>: <span class="hljs-keyword">fn</span>(<span class="hljs-variable">a</span>) -> <span class="hljs-variable">b</span>,
) -> #(<span class="hljs-variable">a</span>, <span class="hljs-variable">b</span>)</code></pre>
