compiler-core/main/__generate/docs/snapshots/gleam_core____generate__docs__tests__highlight_opaque_custom_type.snap
---
source: compiler-core/src_refactored/__generate/docs/tests.rs
assertion_line: 832
expression: output
snapshot_kind: text
---
---- SOURCE CODE
-- main.gleam

pub opaque type Wibble(a, b) {
  Wibble(a, i: Int)
  Wobble(b: b, c: String)
}


---- TYPES

--- Wibble
<pre><code><span class="hljs-keyword">pub opaque type </span><span class="hljs-title">Wibble</span>(<span class="hljs-variable">a</span>, <span class="hljs-variable">b</span>)</code></pre>
